--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+    <title>
+      HENKAN
+    </title>
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <h2>변환 HENKAN</h2>
     </div>
+    <div class="workarea">
+      <input type="checkbox" id="force_jong"> 종성 강제변환
+    <textarea id="ta_from" >야메로! 이런 싸움은 모 야메룽다!</textarea>
+    <div>
+    <button id="convertBtn"> CONVERT </button>
+    </div>
+    <textarea id="ta_to" ></textarea>
+    </div>
+
     <script src="js/compiled/psyshiot.js" type="text/javascript"></script>
   </body>
 </html>
